# aoc25

./: .clang-format  CMakeLists.txt
cmake/: Findnvl.cmake  Findz3.cmake
day01/: Day01.cpp
day02/: Day02.cpp
day03/: Day03.cpp
day04/: Day04.cpp
day05/: Day05.cpp
day06/: Day06.cpp
day07/: Day07.cpp
day08/: Day08.cpp
day09/: Day09.cpp
day10/: Day10.cpp
day11/: Day11.cpp
day12/: Day12.cpp
